--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 /* home */
 
-#mainCover {
+#main-cover {
     background-image: url("../assets/img/old-books.jpg") ;
     background-repeat: no-repeat; 
     background-size: cover;
@@ -12,7 +12,7 @@
     justify-content: center;
 }
 
-#mainCover h2 {
+#main-cover h2 {
     color: #8B0000;
     font-size: 72px;
     margin-bottom: 20px;
@@ -21,19 +21,19 @@
     text-align: center;
 }
 
-#mainCover .find {
+#main-cover .find_margin {
     width: 100%;
     height: auto;
     text-align: center;
     padding-bottom: 3em;
 }
 
-#mainCover .find input[type="text"] {
+#main-cover .find_margin input[type="text"] {
     padding: 8px;
     width: 40%;
 }
 
-#mainCover .find input[type="submit"] {
+#main-cover .find_margin input[type="submit"] {
     margin-left: 24px;
     padding: 10px;
     color: white;
@@ -44,11 +44,11 @@
     transition: transform 0.5s;
 }
 
-#mainCover .find input[type="submit"]:hover {
+#main-cover .find_margin input[type="submit"]:hover {
     transform: scale(1.2);
 }
 
-#sliderNew {
+#slider-new {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,13 +56,13 @@
     margin: 20px;
 }
 
-#sliderNew h2 {
+#slider-new h2 {
     font-weight: 800;
     color: #8B0000;
     padding-bottom: 20px;
 }
 
-.sliderContainer{
+.slider-container{
     background: #fff;
     display: flex;
     align-items: center;
@@ -74,7 +74,7 @@
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
 }
 
-.sliderContainer .slider{
+.slider-container .slider{
     display: flex;
     align-items: center;
     gap: 30px;
@@ -84,13 +84,13 @@
     opacity: 1;
 }
 
-.sliderContainer .slider p{
+.slider-container .slider p{
     color: #888;
     text-align: justify;
     font-size: 15px;
 }
 
-.sliderContainer .slider img{
+.slider-container .slider img{
     width: 150px;
     height: 231px;
     object-fit: cover;
@@ -98,21 +98,21 @@
     margin-bottom: 10px;
 }
 
-.sliderContainer .slider h3{
+.slider-container .slider h3{
     color: #333;
     font-size: 15px;
     margin-bottom: 2px;
     text-align: center;
 }
 
-.sliderContainer .slider h6{
+.slider-container .slider h6{
     color: #777;
     font-weight: 500;
     text-align: center;
     font-size: 12px;
 }
 
-.sliderContainer button{
+.slider-container button{
     font-size: 28px;
     height: 48px;
     width: 48px;
@@ -125,11 +125,11 @@
     box-shadow: 0 0 10px rgba(78, 17, 17, 0.814);
 }
 
-.sliderContainer button#next {
+.slider-container button#next {
     right: -26px;
 }
 
-.sliderContainer button#prev {
+.slider-container button#prev {
     left: -26px;
 }
 
@@ -172,16 +172,19 @@
   width: 100%;
   z-index: 100;
 }
+
 .image-data span.textSwiper {
   font-size: 14px;
   font-weight: 400;
   color: #fff;
 }
+
 .image-data h2 {
   font-size: 45px;
   font-weight: 600;
   color: #fff;
 }
+
 a.button {
   display: inline-block;
   padding: 10px 20px;
@@ -192,30 +195,36 @@ a.button {
   margin-top: 25px;
   transition: all 0.3s ease;
 }
+
 a.button:hover {
   color: #fff;
   background-color: #8B0000;
 }
+
 .nav-btn {
   height: 50px;
   width: 50px;
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.3);
 }
+
 .nav-btn:hover {
   background: rgba(255, 255, 255, 0.4);
 }
+
 .swiper-button-next {
   right: 50px;
 }
+
 .swiper-button-prev {
   left: 50px;
 }
-.nav-btn::before,
-.nav-btn::after {
+
+.nav-btn::before, .nav-btn::after {
   font-size: 25px;
   color: #fff;
 }
+
 .swiper-pagination-bullet {
   opacity: 1;
   height: 12px;
@@ -223,64 +232,65 @@ a.button:hover {
   background-color: #fff;
   visibility: hidden;
 }
+
 .swiper-pagination-bullet-active {
   border: 2px solid #fff;
   background-color: #c87e4f;
 }
 
-#partnersBlock {
+#partners-block {
     width: 100%;
     height: auto;
     padding-top: 4em;
 }
 
-.partnersArticle {
+.partners-article {
     margin-bottom: 4em;
 }
 
-.partnersTitle {
+.partners-title {
     font-size: 3em;
     margin-bottom: 0.5em;
     text-align: center;
     text-shadow: 2px 2px 3px gray;
 }
-.partnersSpan {
+.partners-span {
     color: #8B0000;
 }
 
-.partnersText {
+.partners-text {
     font-size: 1.2em;
     margin-bottom: 3em;
     text-align: center;
     width: 100%;
 }
 
-.partnersIcon {
+.partners-icon {
     text-align: center;
     margin-bottom: 4em;
 }
 
-.partnersIcon img { 
+.partners-icon img { 
     width: 15em;
 }
 
 /* about */
 
-.aboutContainer {
+.about-container {
     background-image: url(../assets/img/paper.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     height: 300px;
 }
 
-.aboutContainer h1, .aboutContainer h3 {
+.about-container h1, .about-container h3 {
     display: flex;
     justify-content: right;
     padding-top: 50px;
     padding-right: 10%;
 }
 
-.aboutContainer h1 {
+.about-container h1 {
     color: rgb(255, 255, 255);
     font-style: italic;
     font-weight: bolder;
@@ -288,12 +298,12 @@ a.button:hover {
     text-shadow: 3px 3px 4px #8B0000;
 }
 
-.aboutContainer h3 {
+.about-container h3 {
     color: #ffffff;
     text-shadow: 3px 3px 4px #8B0000;
 }
 
-.historyBlock h1 {
+.history-block h1 {
     color: rgb(0, 0, 0);
     font-weight: bolder;
     font-size: 30px;
@@ -301,76 +311,79 @@ a.button:hover {
     padding-top: 30px;
 }
 
-.historyBlock p {
+.history-block p {
     padding: 30px;
     text-align: justify;
     font-size: 24px;
 }
-.locationContainer {
+.location-container {
   height: auto;
   width: 100%;
   padding: 6em 7em 6em 7em;
 }
 
-.contactsArticle {
+.contacts-article {
   text-align: center;
 }
 
-.contactsName {
+.contacts-name {
   font-size: 2em;
   font-weight: bold;
   color: #8B0000;
   margin-bottom: 1em;
 }
 
-.blockAddress {
+.block-address {
   display: flex;
   flex-direction: row;
   margin-top: 5em;
   justify-content: center;
 }
 
-.address {
+.address-container {
   padding: 3em;
   margin-right: 2em;
 }
 
-.address svg {
+.addressContainer svg {
   transition: transform 0.5s; 
 }
 
-.address svg:hover {
+.address-container svg:hover {
   transform: scale(1.2); 
 }
 
-.address h2, .address h3 {
+.address-container h2, .address-container h3 {
   margin-bottom: 0.7em;
   font-size: 1.4em;
   font-weight: bolder;
 }
 
-.address h3 {
+.address-container h3 {
   padding-bottom: 1em;
 }
 
-.top_add {
+.top-add {
   font-weight: bold;
   text-transform: uppercase;
 }
 
-.addressList li {
+.address-list li {
   margin-bottom: 1em;
   font-size: 1em;
 }
 
-.map {
+.map-div {
   text-align: center;
   width: 100%;
 }
 
-.map iframe {
+.map-div iframe {
   width: 80%;
 }
+
+/* news */
+
 
 
   @media screen and (max-width: 768px) {
@@ -385,13 +398,13 @@ a.button:hover {
 
 @media screen and (max-width: 720px) {
     
-    .sliderContainer{height: auto; padding: 20px 0 20px 0;}
+    .slider-container{height: auto; padding: 20px 0 20px 0;}
 
-    .sliderContainer .slider{
+    .slider-container .slider{
         flex-direction: column;
     }
 
-    .sliderContainer .slider p{
+    .slider-container .slider p{
         font-size: 13px;
     }
 }
