--- a/styles/style.css
+++ b/styles/style.css
@@ -607,8 +607,122 @@ input[type="text"]{
   padding: 30px;
   border-radius: 10px;
   background-color: #8B0000;
-  color: #fff;
+  text-align: center;
 }
+
+#app-container h1 {
+  color: #fff;
+  text-transform: uppercase;
+  padding-bottom: 20px;
+  border-bottom: 2px solid #e0e0e0;
+}
+
+#quote {
+  color: #fff;
+  padding: 20px 0 20px 0;
+}
+
+@keyframes quote
+{
+    from { color: #fff }
+    to {color: #000000; }
+}
+
+.quote {
+    animation: quote 10s infinite;
+}
+
+#quote-btn {
+  background-color: #000;
+  color: #fff;
+  padding: 8px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+/* books page */
+
+#books-catalog-container {
+  width: 100%;
+  text-align: center;
+}
+
+#books-catalog-container h1 {
+  color: #8B0000;
+  font-weight: bolder;
+  text-transform: uppercase;
+}
+
+#books-catalog-container input[type="text"] {
+  padding: 8px;
+  width: 40%;
+}
+
+#books-catalog-container input[type="submit"] {
+  margin-left: 24px;
+  padding: 10px;
+  color: white;
+  background-color: #8B0000;
+  font-size: 16px;
+  font-weight: bolder;
+  border-radius: 10px;
+}
+
+#books-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.books-catalog {
+  border: 1px solid #8B0000;
+  margin: 80px;
+  padding: 10px;
+  width: 250px;
+  height: 470px;
+  text-align: center;
+  box-shadow: 3px 3px 4px #8B0000;
+}
+
+.books-catalog h3 {
+  color: #8B0000;
+  text-transform: uppercase;
+}
+
+.books-catalog h4 {
+  font-weight: 600;
+}
+
+.books-catalog p {
+  font-weight: bold;
+  color: #8B0000;
+}
+
+.books-catalog button {
+  padding: 10px 20px 10px 20px;
+  color: #fff;
+  background-color: #8B0000;
+  border-radius: 5px;
+  transition: transform 0.5s;
+}
+
+.books-catalog button:hover {
+  transform: scale(1.2);
+}
+
+#prev-btn-pagination, #next-btn-pagination {
+  padding: 5px;
+  color: #fff;
+  background-color: #8B0000;
+  border: none;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+
+
 
 
 @media all and (max-width: 1180px) {
